# loadstar

./: .gitignore  QUALITY_CONTROL.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
bootstrap/: install.sh
common/: dot_editorconfig  dot_gitconfig.tmpl  dot_tmux.conf.tmpl  dot_zshrc.tmpl
common/dot_config/: starship.toml
common/dot_config/direnv/: direnvrc
common/dot_config/mise/: config.toml.tmpl
installer/: Cargo.toml  Makefile  build.rs
installer/assets/: complete.txt
installer/src/: ascii_art.rs  catalog.rs  config.rs  effects.rs  executor.rs  github.rs  main.rs  render.rs  system.rs  wizard.rs
os/linux/: install-tools.sh
os/macos/: install-tools.sh
scripts/: health-check.sh
security/: setup-encryption.sh
