[package]
name = "loadstar"
version = "0.1.0"
edition = "2021"
authors = ["Oddur Sigurdsson"]
description = "LOAD\"*\",8,1 — a Commodore-flavored machine setup wizard"
license = "MIT"
repository = "https://github.com/oddurs/loadstar"
keywords = ["dotfiles", "installer", "tui", "commodore", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "load"
path = "src/main.rs"

[dependencies]
# TUI Framework
ratatui = "0.25"
crossterm = { version = "0.27", features = ["event-stream"] }

# Error handling
anyhow = "1.0"

# Random for quirky messages and effects
rand = "0.8"

# User info detection
whoami = "1.5"

# Serialization (for wizard state, catalog)
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
